fix: added poster support
